# aegis

./: .gitignore  CHANGELOG.md  Cargo.toml  DECISIONS.md  README.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  release-desktop.yml  release.yml
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: init.rs  main.rs
crates/aegis-cli/tests/: cli.rs  log_admin.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: lib.rs  log.rs  parse.rs  policy.rs  redact.rs  rules.rs  types.rs
crates/aegis-daemon/: Cargo.toml
crates/aegis-daemon/src/: ipc.rs  lib.rs  main.rs
crates/aegis-daemon/tests/: ipc_roundtrip.rs  phase2_model.rs  phase4_watch.rs  phase5_killswitch.rs
crates/aegis-intercept/: Cargo.toml
crates/aegis-intercept/src/: hook.rs  lib.rs  mcp.rs  shim.rs
crates/aegis-intercept/tests/: hook_bridge.rs  mcp_exec.rs  shim_exec.rs
crates/aegis-model/: Cargo.toml
crates/aegis-model/src/: lib.rs  llama.rs  manage.rs
crates/aegis-tui/: Cargo.toml
crates/aegis-tui/examples/: frame.rs
crates/aegis-tui/src/: app.rs  lib.rs  ui.rs
crates/kintsugi-app/: Cargo.toml
crates/kintsugi-app-types/: Cargo.toml
crates/kintsugi-app-types/src/: lib.rs
crates/kintsugi-app/src/: lib.rs
crates/kintsugi-cli/: Cargo.toml
crates/kintsugi-cli/src/: admin_cmd.rs  main.rs  model_cmd.rs  service.rs  shell_enforce.rs  uninstall.rs
crates/kintsugi-cli/tests/: admin.rs  cli.rs
crates/kintsugi-core/src/: admin.rs  lib.rs  log.rs  rules.rs  taint.rs
crates/kintsugi-daemon/: Cargo.toml
crates/kintsugi-daemon/src/: ipc.rs  lib.rs  watch.rs
crates/kintsugi-daemon/tests/: admin_shutdown.rs  recorder.rs  taint_state.rs
crates/kintsugi-intercept/: Cargo.toml
crates/kintsugi-intercept/src/: hook.rs  mcp.rs  observe.rs  shim.rs
crates/kintsugi-intercept/tests/: fail_closed.rs
crates/kintsugi-model/: Cargo.toml
crates/kintsugi-model/src/: config.rs  lib.rs  llama.rs
crates/kintsugi-tui/src/: app.rs  lib.rs  splash.rs  ui.rs
design/control-room/: Kintsugi Control Room.dc.html
design/enterprise-2/dioxus/: Cargo.toml  README.md
design/enterprise-2/dioxus/assets/: styles.css
design/enterprise-2/dioxus/src/: main.rs  state.rs
design/enterprise-2/dioxus/src/components/: login.rs  mod.rs  screens.rs  shell.rs
desktop/: README.md
desktop-dx/: Cargo.toml
desktop-dx/assets/: styles.css
desktop-dx/src/: bindings.rs  data.rs  install.rs  main.rs  state.rs  theme.rs  tray.rs
desktop-dx/src/components/: login.rs  screens.rs  shell.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/ui/: Cargo.toml  app.css
desktop/ui/src/: main.rs
docs/: model.md  policy.md  security-assessment.md
scripts/: fix_svg_width.py  gen_svg.py  install.sh
site/: about.html  app.js  features.html  index.html  install.html  install.sh  pick-model.sh  style.css
