[workspace]
resolver = "2"
members = [
    "crates/aegis-core",
    "crates/aegis-daemon",
    "crates/aegis-intercept",
    "crates/aegis-cli",
    "crates/aegis-model",
    "crates/aegis-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["arrowassassin"]
repository = "https://github.com/arrowassassin/aegis"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
aegis-core = { path = "crates/aegis-core" }
aegis-daemon = { path = "crates/aegis-daemon" }
aegis-intercept = { path = "crates/aegis-intercept" }
aegis-model = { path = "crates/aegis-model" }
aegis-tui = { path = "crates/aegis-tui" }

# Serialization / data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors
anyhow = "1"
thiserror = "1"

# Identity / time / hashing
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
sha2 = "0.10"
hex = "0.4"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# IPC (cross-platform local sockets / named pipes)
interprocess = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Config dirs
directories = "5"

# Dev / tests
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
