[package]
name = "aegis-model"
description = "Aegis Tier-2 model wrapper. Stub in Phase 0/1 (rules-only); the real CPU GGUF model lands in Phase 2."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aegis-core.workspace = true
serde.workspace = true
anyhow.workspace = true
