# Kintsugi desktop app (Tauri shell). NOT part of the main workspace — it depends
# on the platform webview (webkit2gtk / WKWebView / WebView2), which CI and the
# headless build env don't carry. Build it on a workstation:
#   cd desktop/src-tauri && cargo tauri dev      # or: cargo tauri build
# Its own `[workspace]` table detaches it from the repo-root workspace so the
# default `cargo build`/`cargo test --workspace` never compiles webview deps.
[workspace]

[package]
name = "kintsugi-desktop"
version = "0.2.1"
edition = "2021"
description = "Kintsugi Control Room — local-first desktop dashboard for AI-agent command governance."
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The data-binding engine + the daemon path resolver, by path from the repo root.
kintsugi-app = { path = "../../crates/kintsugi-app" }
kintsugi-daemon = { path = "../../crates/kintsugi-daemon" }

[features]
# Default Tauri custom-protocol used in production builds.
custom-protocol = ["tauri/custom-protocol"]
